# cbeta-reader

./: .gitignore  CLAUDE.md  Makefile  README.md  generate.py  pyproject.toml
cbeta_reader/: app.py  catalog.py  parser.py  toc.py
static/: base.js  bookmarks.js  index.js  reader.js  style.css
static/fonts/jigmo/: jigmo.css
static/fonts/lxgw-wenkai/: lxgw-wenkai.css
static/fonts/noto-sans-tc/: noto-sans-tc.css
static/fonts/noto-serif-tc/: noto-serif-tc.css
templates/: base.html  index.html  reader.html  toc.html
tests/: test_parser.py
