[project]
name = "cbeta-reader"
version = "0.1.0"
description = "A minimal CBETA reader for Linux"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.3",
    "lxml>=6.0.2",
]

[project.scripts]
cbeta-reader = "cbeta_reader.app:main"

[tool.setuptools.packages.find]
include = ["cbeta_reader*"]

[tool.ruff]
line-length = 99

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
